# echoes

./: .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  datasets.py  esn.py  index.html  mkdocs.yml  notes.md  objects.inv  pyproject.toml  requirements_dev.txt  requirements_docs.txt  setup.py  sitemap.xml  utils.py
.github/workflows/: ci.yml
api/ESNGenerator/: index.html
api/ESNRegressor/: index.html
api/plotting/: index.html
api/utils/: index.html
docs/: index.md  style.css
docs/api/: ESNGenerator.md  ESNRegressor.md  plotting.md  utils.md
docs/examples/notebooks/: LFU-cache.ipynb  plot_generator_mackeyglass17.ipynb  plot_regressor_estimator.ipynb
docs/examples/plot_generator_mackeyglass17/: index.md
docs/examples/plot_regressor_sincos/: index.md
docs/examples/plot_reservoir_activity/: index.md
docs/tutorial/: index.md
echoes/: __init__.py  datasets.py  esn.py  utils.py
echoes/esn/: __init__.py  _base.py  _generative.py  _generator.py  _predictive.py  _regressor.py
echoes/model_selection/: __init__.py  _grid_base.py  _grid_generative.py  _grid_predictive.py  _grid_task.py
echoes/plotting/: __init__.py  _core.py  _memory_capacity.py
echoes/reservoir/: _leaky_numba.py  _leaky_python.py  leaky_python.py
echoes/reservoirs/: __init__.py  _leaky.py  _leaky_numba.py
echoes/tasks/: __init__.py  _memory_capacity.py
examples/: GridSearchMemoryCapacity.py  MackeyGlass-t17.ipynb  gridsearch_generative.py  gridsearch_memorycapacity.py  gridsearch_predictive.py  mackeyglasst17.py  memory_capacity.py  reservoir_activity.py  sincos.py
examples/data/: afib.txt
examples/notebooks/: GridSearchMemoryCapacity.ipynb  gridsearch_generative.ipynb  gridsearch_memorycapacity.ipynb  gridsearch_predictive.ipynb  mackeyglasst17.ipynb  memory_capacity.ipynb  plot_generator_atrial.ipynb  plot_generator_mackeyglass17.ipynb  plot_regressor-gridsearch.ipynb  plot_regressor-pipeline-and-gridsearch.ipynb  plot_regressor_sincos.ipynb  plot_reservoir_activity.ipynb  reservoir_activity.ipynb  sincos.ipynb  task_template.ipynb
examples/notebooks/LFU-cache/: index.html
examples/notebooks/generator-atrial/: index.html
examples/notebooks/generator-mackeyglass17/: index.html
examples/notebooks/plot_generator_atrial/: index.html
examples/notebooks/plot_generator_mackeyglass17/: index.html
examples/notebooks/plot_regressor-gridsearch/: index.html
examples/notebooks/plot_regressor-pipeline-and-gridsearch/: index.html
examples/notebooks/plot_regressor_estimator/: index.html
examples/notebooks/plot_regressor_sincos/: index.html
examples/notebooks/plot_reservoir_activity/: index.html
examples/notebooks/regressor-gridsearch/: index.html
examples/notebooks/regressor-pipeline-and-gridsearch/: index.html
examples/notebooks/regressor-sincos/: index.html
examples/notebooks/reservoir-activity/: index.html
examples/plot_generator_mackeyglass17/: index.html
examples/plot_regressor_sincos/: index.html
examples/plot_reservoir_activity/: index.html
search/: search_index.json
src/echoes/: __init__.py  utils.py
src/echoes/esn/: _base.py  _generator.py  _regressor.py
src/echoes/plotting/: __init__.py  _core.py
src/echoes/reservoir/: __init__.py  _leaky_numba.py
tests/: test_check_estimator.py  test_generator.py  test_random_seed.py  test_spec_rad.py  test_wout_shape.py
tutorial/: index.html
