[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
echoes = ["data/*"]

[project]
name = "echoes"
version = "1.0.1"
license = "MIT"
license-files = [ "LICENSE" ]
description = "Machine Learning with Echo State Networks in Python"
authors = [
    { name = "Fabrizio Damicelli", email = "fabridamicelli@gmail.com" }
]

urls.Changelog = "https://github.com/fabridamicelli/echoes/blob/main/CHANGELOG.md"
urls.Repository = "https://github.com/fabridamicelli/echoes" 
urls.Documentation = "https://fabridamicelli.github.io/echoes"

readme = "README.md"
keywords = [
    "python",
    "machine-learning",
    "shallow-learning",
    "neural-networks",
    "recurrent-neural-networks",
    "reservoir-computing",
    "echo-state-network",
]
requires-python = ">=3.9"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23.5",
    "scikit-learn>=1.2.0",
    "pandas>=1.0.3",
    "matplotlib>=3.2.0",
    "seaborn>=0.10.1",
    "numba>=0.56.4",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]


[tool.mypy]
mypy_path = "src/"
ignore_missing_imports = true
no_strict_optional = true
